Build based on our image.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
 include:
   - project: 'common/gitlab-ci'
-    ref: v0.4.14
-    file: '/templates/npm-dockerfile-build.yml'
+    ref: v0.4.15
+    file: '/templates/dockerfile-build.yml'
 
 variables:
   DOCKER_BUILDKIT: 1
   CODE_QUALITY_DISABLED: "true"
   SAST_DISABLED: "true"
+  KYSO_IGNORE_BRANCH: "true"
